<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.BookDetailsActivity"
                android:background="@color/background_dark">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/saveLinearLayout"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/margin_tiny"
        android:background="@android:color/black"
        android:elevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">


            <ImageView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:id="@+id/bookCoverImageView"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/cover_photo_cont_desc"
                android:layout_margin="@dimen/margin_small"/>

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/title_label"
                android:id="@+id/titleLabelTextView"
                android:layout_alignBaseline="@+id/titleEditText"
                android:layout_alignParentStart="true"
                android:gravity="end"/>

            <EditText
                android:id="@+id/titleEditText"
                android:inputType="textNoSuggestions|textCapWords"
                android:hint="@string/enter_title_hint"
                android:lines="1"
                style="@style/AuthEditText"
                android:gravity="start"
                android:textSize="@dimen/text_medium"
                android:elevation="5dp"
                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/titleLabelTextView"
                android:focusable="false"
                android:enabled="false"
                android:layout_below="@+id/bookCoverImageView"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/author_label"
                android:id="@+id/authorLabelTextView"
                android:layout_alignBaseline="@+id/authorEditText"
                android:layout_alignParentStart="true"
                android:gravity="end"/>

            <EditText
                android:id="@+id/authorEditText"
                android:inputType="textNoSuggestions|textPersonName"
                android:hint="@string/enter_author_hint"
                android:lines="1"
                style="@style/AuthEditText"
                android:gravity="start"
                android:elevation="5dp"
                android:layout_width="wrap_content"
                android:layout_below="@+id/titleEditText"
                android:layout_alignParentEnd="true"
                android:layout_alignStart="@+id/titleEditText"
                android:enabled="false"
                android:focusable="false"/>

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/summary_label"
                android:id="@+id/summaryLabelTextView"
                android:layout_alignBaseline="@+id/summaryEditText"
                android:layout_alignParentStart="true"
                android:gravity="end"/>

            <EditText
                android:id="@+id/summaryEditText"
                android:inputType="textNoSuggestions|textCapSentences|textEmailSubject|textMultiLine"
                android:hint="@string/enter_summary_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AuthEditText"
                android:isScrollContainer="true"
                android:gravity="start"
                android:minLines="1"
                android:maxLength="1000"
                android:elevation="5dp"
                android:layout_below="@+id/authorEditText"
                android:layout_alignParentEnd="true"
                android:layout_alignStart="@+id/authorEditText"
                android:enabled="false"
                android:focusable="false"/>

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/rating_label"
                android:id="@+id/ratingLabelTextView"
                android:gravity="end"
                android:layout_below="@+id/summaryEditText"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/margin_huge"/>

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1"
                android:rating="0"
                style="@style/bookRatingBar"
                android:elevation="5dp"
                android:layout_below="@+id/summaryEditText"
                android:layout_alignStart="@+id/summaryEditText"
                android:isIndicator="true"/>



            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:elevation="5dp"
                android:id="@+id/radioGroup2"
                android:layout_below="@+id/ratingBar"
                android:layout_alignEnd="@+id/ratingBar"
                android:layout_alignStart="@+id/ratingBar">

                <RadioButton
                    android:id="@+id/readRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/read"
                    style="@style/AuthRadioButton"
                    android:layout_marginEnd="@dimen/margin_huge"
                    android:clickable="false"/>

                <RadioButton
                    android:id="@+id/notReadRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/not_read"
                    style="@style/AuthRadioButton"
                    android:layout_marginStart="@dimen/margin_huge"
                    android:clickable="false"/>

            </RadioGroup>

        </RelativeLayout>




    </ScrollView>

    <LinearLayout
        android:id="@+id/saveLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:weightSum="2"
        android:visibility="invisible">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/save"
            style="@style/AuthButton"
            android:layout_weight="1"
            android:layout_marginEnd="1dp"/>

        <Button
            android:id="@+id/undoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/undo"
            style="@style/AuthButton"
            android:layout_weight="1"
            android:layout_marginStart="1dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/editLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:weightSum="2"
        android:visibility="visible">

        <Button
            android:id="@+id/editButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/menu_edit"
            style="@style/AuthButton"
            android:layout_weight="1"
            android:layout_marginEnd="1dp"/>

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/menu_delete"
            style="@style/AuthButton"
            android:layout_weight="1"
            android:layout_marginStart="1dp"/>
    </LinearLayout>

</RelativeLayout>