<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.prindle.a.r.booklogrp.ui.MainActivity"
                android:background="@color/background_dark">


    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bookListView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/radioGroup"
        android:dividerHeight="2dp"
        android:divider="@color/background_light"
        android:layout_margin="@dimen/margin_tiny"
        android:fastScrollEnabled="true"
        android:fastScrollAlwaysVisible="false"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/background_light"
        android:elevation="5dp">

        <RadioButton
            android:id="@+id/allRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/all"
            android:textColor="@android:color/white"
            style="@style/AuthRadioButton"/>

        <RadioButton
            android:id="@+id/readRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/read"
            android:textColor="@android:color/white"
            style="@style/AuthRadioButton"
            android:layout_margin="@dimen/margin_medium"/>

        <RadioButton
            android:id="@+id/notReadRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/not_read"
            android:textColor="@android:color/white"
            style="@style/AuthRadioButton"/>

    </RadioGroup>

</RelativeLayout>