<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/margin_tiny"
    android:paddingRight="@dimen/margin_tiny"
    android:paddingTop="@dimen/margin_tiny"
    android:elevation="5dp"
    android:background="@android:color/black">

    <ImageView
        android:id="@+id/bookCoverImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="false"
        android:contentDescription="@string/book_icon_cont_desc"
        android:scaleType="fitCenter"
        android:src="@drawable/book"
        android:layout_alignBottom="@+id/summaryTextView"/>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/bookCoverImageView"
        android:layout_toStartOf="@+id/ratingBar"
        android:layout_marginStart="@dimen/margin_tiny"
        android:layout_marginTop="@dimen/margin_tiny"
        android:text="@string/placeholder_text"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        android:ellipsize="end"
        style="@style/AuthTextView"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/authorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTextView"
        android:layout_toEndOf="@+id/bookCoverImageView"
        android:layout_toStartOf="@+id/ratingBar"
        android:layout_marginStart="@dimen/margin_tiny"
        android:layout_marginBottom="@dimen/margin_tiny"
        android:text="@string/placeholder_text"
        android:textSize="@dimen/text_small"
        android:ellipsize="end"
        style="@style/AuthTextView"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/summaryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/authorTextView"
        android:layout_marginBottom="@dimen/margin_tiny"
        android:text="@string/placeholder_text"
        android:textSize="@dimen/text_tiny"
        style="@style/AuthTextView"
        android:lines="2"
        android:ellipsize="end"
        android:layout_marginTop="@dimen/margin_tiny"
        android:maxLines="4"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/authorTextView"/>

    <TextView
        android:id="@+id/readTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/not_read"
        android:textSize="@dimen/text_tiny"
        android:textColor="@color/text_color"
        android:textStyle="italic"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_tiny"
        android:layout_alignLeft="@+id/ratingBar"
        android:layout_marginRight="@dimen/margin_tiny"
        android:gravity="center"/>

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/bookRatingBarSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:isIndicator="true"
        android:numStars="5"
        android:stepSize="1"
        android:rating="3"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_below="@+id/readTextView"/>

</RelativeLayout>